Show nprogress loader in header Fix blog display on smaller screen sizes

--- a/styles/3_components.css
+++ b/styles/3_components.css
@@ -2,6 +2,10 @@
   height: 65px;
   opacity: .7;
   z-index: 2;
+  background-color: rgba(0,0,0,.3);
+}
+#nprogress .peg {
+  box-shadow: none;
 }
 
 /* SHOWREEL */
